Fix symlink handling in Project Rescan, New Project adding files/folders.

BUG: 138107